# magna

./: .gitignore  .mcp.json  AGENTS.db  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  state-gqlmin.md
.agent-team/: v0.1-finishing-polish.md
.github/workflows/: ci.yml  gqlmin-size.yml
crates/fw-graph/: Cargo.toml
crates/fw-graph-build/: Cargo.toml
crates/fw-graph-build/src/: error.rs  extension.rs  gather.rs  lib.rs  naming.rs  plan_resolver.rs  type_map.rs  union_step.rs
crates/fw-graph-build/src/executor/: args.rs  cursor.rs  dataloader.rs  mod.rs  sql_bridge.rs
crates/fw-graph-build/src/register/: conditions.rs  connections.rs  enums.rs  filters.rs  functions.rs  mod.rs  mutations.rs  node_interface.rs  object_types.rs  query_root.rs
crates/fw-graph-build/src/resolve/: alignment.rs  graph.rs  mod.rs  mutation.rs  query.rs  reader.rs  reader_blocks.rs  relation.rs  store_reader.rs  word_graph.rs  word_study.rs
crates/fw-graph-build/src/resolve/tocma/: db.rs  input.rs  mod.rs  pericope.rs  structs.rs  theology.rs  verse.rs
crates/fw-graph-build/tests/: extension_wiring.rs  integration.rs  tocma_integration.rs
crates/fw-graph-config/: Cargo.toml  moon.yml
crates/fw-graph-config/src/: lib.rs  plugin.rs  preset.rs  resolve.rs
crates/fw-graph-core/: Cargo.toml  moon.yml
crates/fw-graph-core/src/: executor.rs  fingerprint.rs  lib.rs  optimizer.rs  planner.rs  step.rs
crates/fw-graph-dataplan/: Cargo.toml  moon.yml
crates/fw-graph-dataplan/src/: codec.rs  lib.rs  registry.rs
crates/fw-graph-dataplan/src/steps/: mod.rs  pg_delete.rs  pg_insert.rs  pg_select.rs  pg_update.rs
crates/fw-graph-introspect/: Cargo.toml  moon.yml
crates/fw-graph-introspect/src/: introspect.rs  lib.rs  queries.rs  types.rs
crates/fw-graph-introspect/tests/: integration.rs
crates/fw-graph-serv/: Cargo.toml
crates/fw-graph-serv/src/: error.rs  handler.rs  jwt.rs  lib.rs  plan_cache.rs  rls.rs  state.rs  ws.rs
crates/fw-graph-sql/: Cargo.toml  moon.yml
crates/fw-graph-sql/src/: builder.rs  delete_builder.rs  fragment.rs  insert_builder.rs  lib.rs  render.rs  update_builder.rs
crates/fw-graph-subscriptions/: Cargo.toml
crates/fw-graph-subscriptions/src/: error.rs  lib.rs  publisher.rs
crates/fw-graph-types/: Cargo.toml
crates/fw-graph-types/src/: auth.rs  error.rs  lib.rs  pg.rs  step.rs
crates/fw-graph/src/: config.rs  main.rs
crates/magna/: Cargo.toml
crates/magna-build/: Cargo.toml
crates/magna-build/src/: error.rs  extension.rs  gather.rs  ir.rs  lib.rs  plan_resolver.rs  smart_tags.rs  type_map.rs  union_step.rs
crates/magna-build/src/executor/: args.rs  dataloader.rs  mod.rs  sql_bridge.rs
crates/magna-build/src/register/: connections.rs  functions.rs  mod.rs  node_interface.rs  object_types.rs  order_by.rs  query_root.rs  relations.rs  scalars.rs
crates/magna-build/src/resolve/: mutation.rs  query.rs  relation.rs
crates/magna-build/tests/: extension_wiring.rs  integration.rs
crates/magna-config/: Cargo.toml  moon.yml
crates/magna-config/src/: lib.rs  plugin.rs  preset.rs  resolve.rs
crates/magna-core/: Cargo.toml  moon.yml
crates/magna-core/src/: executor.rs  fingerprint.rs  lib.rs  optimizer.rs  planner.rs  step.rs
crates/magna-dataplan/: Cargo.toml  moon.yml
crates/magna-dataplan/src/: codec.rs  lib.rs  registry.rs
crates/magna-dataplan/src/steps/: mod.rs  pg_delete.rs  pg_insert.rs  pg_select.rs  pg_update.rs
crates/magna-gqlmin/: Cargo.toml  README.md  SIZE.md
crates/magna-gqlmin/docs/: audit-r6-slice-panics.md  director-r1-note.md  director-r2-note.md  director-r3-note.md  director-r5-note.md  director-r6-note.md  investigation-r2-wasm-size.md  investigation-r3-bumpalo-panic-bloat.md  investigation-r5-span-indexed-design.md  verifier-r1-report.md
crates/magna-gqlmin/scripts/: check-features.sh  wasm-smoke.mjs
crates/magna-gqlmin/src/: error.rs  lex.rs  lib.rs  napi.rs  pretty.rs  validate.rs  wasm.rs
crates/magna-gqlmin/src/parse/: mod.rs
crates/magna-gqlmin/tests/: corpus.rs  pretty.rs  serde_smoke.rs  validation.rs
crates/magna-gqlmin/tests/corpus/: arguments_all_value_kinds.graphql  block_string_arg.graphql  comments_and_commas.graphql  default_value.graphql  empty_selection_error.graphql  field_alias.graphql  fragment_definition.graphql  fragment_spread.graphql  inline_fragment_no_type.graphql  inline_fragment_with_type.graphql  multiple_operations.graphql  mutation.graphql  named_query.graphql  nested_directives.graphql  non_null_list_type.graphql  query_with_variables.graphql  subscription.graphql  unicode_in_strings.graphql  unterminated_string_error.graphql
crates/magna-introspect/: Cargo.toml  moon.yml
crates/magna-introspect/src/: cache.rs  lib.rs  queries.rs  types.rs
crates/magna-introspect/tests/: integration.rs
crates/magna-remote/: Cargo.toml
crates/magna-remote/src/: lib.rs
crates/magna-serv/: Cargo.toml
crates/magna-serv/src/: handler.rs  jwt.rs  lib.rs  plan_cache.rs  rls.rs  router.rs  schema_registry.rs  state.rs
crates/magna-sql/: Cargo.toml  moon.yml
crates/magna-sql/src/: builder.rs  delete_builder.rs  fragment.rs  insert_builder.rs  lib.rs  render.rs  update_builder.rs
crates/magna-subscriptions/: Cargo.toml
crates/magna-subscriptions/src/: listener.rs  publisher.rs
crates/magna-types/: Cargo.toml
crates/magna-types/src/: auth.rs  error.rs  lib.rs  pg.rs
crates/magna/src/: config.rs  main.rs
docs/: feature-matrix.md
docs/topic-summaries/: gqlmin-summary.md
examples/quickstart/: README.md  queries.md  seed.sql
