[package]
name    = "fw-graph-build"
version = "0.1.0"
edition = "2021"

[dependencies]
fw-decode           = { path = "../fw-decode" }
fw-translate        = { path = "../fw-translate" }
fw-graph-types      = { path = "../fw-graph-types" }
fw-graph-core       = { path = "../fw-graph-core" }
fw-graph-sql        = { path = "../fw-graph-sql" }
fw-graph-introspect = { path = "../fw-graph-introspect" }
fw-graph-dataplan   = { path = "../fw-graph-dataplan" }
fw-graph-config     = { path = "../fw-graph-config" }
async-graphql       = { workspace = true }
async-trait         = { workspace = true }
sqlx                = { workspace = true }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
thiserror           = { workspace = true }
base64              = { workspace = true }
indexmap            = { workspace = true }
uuid                = { workspace = true }
chrono              = { workspace = true }
