[package]
name    = "fw-graph-config"
description = "Plugin and preset configuration system for the fw-graph engine — composable presets, plugin trait, and behavior control"
version.workspace = true
edition.workspace = true

[dependencies]
fw-graph-types = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
