[package]
name        = "fw-graph-dataplan"
description = "Postgres data-plan steps — bridges fw-graph-core execution engine with Postgres via fw-graph-sql and fw-graph-introspect"
version.workspace = true
edition.workspace = true

[dependencies]
fw-graph-types      = { workspace = true }
fw-graph-core       = { workspace = true }
fw-graph-sql        = { workspace = true }
fw-graph-introspect = { workspace = true }
# NOTE: async-graphql is NOT listed here. This is intentional.
# fw-graph-dataplan is a data layer — it has no knowledge of GraphQL types.
sqlx                = { workspace = true }
tokio               = { workspace = true }
async-trait         = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tracing             = { workspace = true }
uuid                = { workspace = true }
indexmap             = { workspace = true }
thiserror           = { workspace = true }
chrono              = { workspace = true }
