[package]
name    = "fw-graph-subscriptions"
version = "0.1.0"
edition = "2021"

[dependencies]
fw-graph-types   = { path = "../fw-graph-types" }
fw-graph-core    = { path = "../fw-graph-core" }
fw-graph-dataplan = { path = "../fw-graph-dataplan" }
fw-graph-serv    = { path = "../fw-graph-serv" }
sqlx             = { workspace = true }
tokio            = { workspace = true }
async-trait      = { workspace = true }
dashmap          = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
tracing          = { workspace = true }
thiserror        = { workspace = true }
