[package]
name        = "magna-core"
description = "Two-phase planning and execution engine — the core of the magna system"
version.workspace = true
edition.workspace = true

[dependencies]
magna-types = { workspace = true }
tokio          = { workspace = true }
async-trait    = { workspace = true }
petgraph       = { workspace = true }
dashmap        = { workspace = true }
serde_json     = { workspace = true }
uuid           = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
