[package]
name        = "magna-gqlmin"
description = "Lightweight GraphQL parser — operations-only at runtime, optional SDL/validation/pretty-error opts. Experimental."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
# Default native-Rust build: ops parser + std formatting helpers.
default = ["ops", "std"]

# Always-on operations parser. Splitting it out lets the wasm/no_std build
# stay minimal and keeps feature lists explicit.
ops = []

# Pull in std; required by `pretty`, `validate`, and any host-side glue.
std = []

# Type-system definitions (schema-language). Feature-gated; not in this round.
sdl = []

# Validation rules. Requires `sdl` and `std`.
validate = ["sdl", "std"]

# Caret/line error rendering. Requires `std`.
pretty = ["std"]

# Serde derives on AST. Used by napi binding to emit JSON.
# R4: scaffolded only — `dep:serde` wired so the feature compiles, but
# `#[derive(Serialize, Deserialize)]` on AST types is deferred to a
# post-R3 round (R3 owns AST shape this round).
serde = ["dep:serde"]

# napi-rs binding. Pulls in serde transitively.
napi = ["serde", "std"]

# Pure no_std + extern "C" wasm exports. NO wasm-bindgen.
wasm = ["ops", "dep:dlmalloc"]

# Opt-in fatter wasm escape hatch via wasm-bindgen.
wasm-bindgen = ["wasm"]

[dependencies]
# Goal: zero runtime deps. Re-evaluate per round.
# dlmalloc: wasm allocator (optional, only under feature = "wasm").
dlmalloc = { version = "0.2", optional = true, default-features = false, features = ["global"] }

# R4 host-side optional deps (none of these touch the wasm size budget —
# all are gated behind features that are not enabled in the wasm build).
#
# serde: AST derives are DEFERRED to post-R3 (R3 owns AST shape). For now
# the feature flag wires the dep so the scaffold compiles.
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
