[package]
name        = "magna-gqlmin"
description = "Lightweight GraphQL parser — operations-only at runtime, optional SDL/validation/pretty-error opts. Experimental."
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
# Default native-Rust build: ops parser + std formatting helpers.
default = ["ops", "std"]

# Always-on operations parser. Splitting it out lets the wasm/no_std build
# stay minimal and keeps feature lists explicit.
#
# `dep:bumpalo` is wired here (rather than on `wasm`) because the AST is
# bumpalo-arena allocated in every build mode — the public API
# `Document<'src, 'bump>` requires the dependency unconditionally with `ops`.
# bumpalo (with default-features off + the `collections` feature) is no_std
# compatible, so this does not break the wasm build.
ops = ["dep:bumpalo"]

# Pull in std; required by `pretty`, `validate`, and any host-side glue.
std = []

# Type-system definitions (schema-language). Feature-gated; not in this round.
sdl = []

# Validation rules. R4 ships ops-only rules (no SDL); schema-aware rules
# will re-add the `sdl` dep when implemented in R6.
validate = ["std"]

# Caret/line error rendering. Requires `std`.
pretty = ["std"]

# Serde derives on AST. Used by napi binding to emit JSON.
# R4: scaffolded only — `dep:serde` wired so the feature compiles, but
# `#[derive(Serialize, Deserialize)]` on AST types is deferred to a
# post-R3 round (R3 owns AST shape this round).
serde = ["dep:serde"]

# napi-rs binding. Pulls in serde transitively.
napi = ["std", "ops", "serde", "dep:napi", "dep:napi-derive", "dep:serde_json"]

# Pure no_std + extern "C" wasm exports. NO wasm-bindgen.
wasm = ["ops", "dep:dlmalloc"]

# Opt-in fatter wasm escape hatch via wasm-bindgen.
wasm-bindgen = ["wasm"]

[dependencies]
# Runtime deps (R3): two — `bumpalo` (arena AST, gated on `ops`) and
# `dlmalloc` (wasm allocator, gated on `wasm`). See
# `docs/investigation-r2-wasm-size.md` for why bumpalo is mandatory.
#
# bumpalo: arena allocator for the AST. Single monomorphized Vec collapses
# the seven distinct `Vec<T>` types into one set of grow/drop/realloc
# functions. `default-features = false` excludes `boxed`/`serde` features —
# only the `collections` (bumpalo::collections::Vec) integration is used.
# This config is no_std-compatible.
bumpalo = { version = "3", default-features = false, features = ["collections"], optional = true }
# dlmalloc: wasm allocator (optional, only under feature = "wasm").
dlmalloc = { version = "0.2", optional = true, default-features = false, features = ["global"] }

# R4 host-side optional deps (none of these touch the wasm size budget —
# all are gated behind features that are not enabled in the wasm build).
#
# serde: AST derives are DEFERRED to post-R3 (R3 owns AST shape). For now
# the feature flag wires the dep so the scaffold compiles.
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
# napi: Node/Bun binding. `napi9` matches modern Node ABI.
napi = { version = "2", default-features = false, features = ["napi9"], optional = true }
napi-derive = { version = "2", optional = true }
# serde_json: used by the napi binding to build a stable JSON envelope.
serde_json = { version = "1", optional = true }

[dev-dependencies]
