[package]
name        = "magna-remote"
description = "HTTP webhook resolvers for magna — Tier 3 of the four-tier extension surface"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
magna-build         = { path = "../magna-build" }
async-graphql       = { workspace = true }
async-trait         = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
thiserror           = { workspace = true }
reqwest             = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
